--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,15 @@
         android:theme="@style/Theme.CounterFit"
         tools:targetApi="31">
         <activity
+            android:name=".SignUp3"
+            android:exported="false" />
+        <activity
+            android:name=".LoseWeight"
+            android:exported="false" />
+        <activity
+            android:name=".GainWeight"
+            android:exported="false" />
+        <activity
             android:name=".SignUp2"
             android:exported="false" />
         <activity
