--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,8 +14,8 @@
         tools:targetApi="31">
         <activity
             android:name=".Main"
-            android:theme="@style/AppTheme"
-            android:exported="false" />
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+            android:exported="true" />
         <activity
             android:name=".Login"
             android:exported="false" />
