--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.android.application'
+    id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin'
 }
 
 android {
@@ -27,10 +28,14 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
 
     }
+    buildFeatures {
+        viewBinding true
+    }
 }
 
 
 dependencies {
+    implementation 'com.google.android.gms:play-services-maps:17.0.1'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
     implementation 'com.google.android.material:material:<latest_version>'
