NEW FOOD NOT DONE

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <uses-permission android:name="android.permission.ACTIVITY_RECOGNITION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -17,7 +17,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CounterFit"
         tools:targetApi="31">
-
+        <activity
+            android:name=".AddMeal"
+            android:exported="false" />
+        <activity
+            android:name=".Food"
+            android:exported="false" />
         <!--
              TODO: Before you run your application, you need a Google Maps API key.
 
@@ -32,7 +37,6 @@
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyCdLt_8yGJjmiUX69GK4dmpmzhUha3UQBU" />
-
 
         <activity
             android:name=".Gym"
