--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,9 @@
         android:theme="@style/Theme.CounterFit"
         tools:targetApi="31">
         <activity
+            android:name=".UpdateGoal"
+            android:exported="false" />
+        <activity
             android:name=".History"
             android:exported="false" />
         <activity
