--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.android.application'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -44,6 +45,9 @@ android {
 
 
     dependencies {
+        implementation platform('com.google.firebase:firebase-bom:32.7.2')
+        implementation 'com.google.firebase:firebase-analytics'
+        implementation 'com.google.firebase:firebase-auth:21.0.1'
         implementation 'com.google.android.gms:play-services-maps:18.2.0'
         implementation 'androidx.cardview:cardview:1.0.0'
         implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
